cloud/kubernetes/pitstop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pitstop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: pitstop.10-0-0-0.nip.io
    http:
      paths:
      - backend:
          service:
            name: webapp
            port:
              number: 7000
        path: /(.*)
        pathType: Prefix
